[auto] released UA Midi Control v 3.9.0 (build 136)

--- a/_includes/content-discussion.html
+++ b/_includes/content-discussion.html
@@ -1,4 +1,4 @@
-<div class="post-content hidden" tab-id="forum">
+<div class="post-content hidden" tab-id="discussion" alternate-id="forum">
 	<span class="title-span"> 
 		{% if include.project.logo %}
 			<img class="title-logo" src="{{ include.project.logo }}"></img>
