--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,7 +11,7 @@
 <script src="/assets/js/kelly.js"></script>
 <script src="/assets/js/contact.js"></script>
 <script src="/assets/js/script.js"></script>
-<script src="/assets/js/changelog.js"></script>
+<script src="/assets/js/release-notes.js"></script>
 <script src="/assets/js/faq.js"></script>
 <script src="/assets/js/table.js"></script>
 <script src="/assets/js/slick-swipe.js"></script>
