--- a/_includes/project.html
+++ b/_includes/project.html
@@ -55,8 +55,8 @@
 		  <button tab-id="content" class="tab"> App </a>
 		  <button tab-id="faq" class="tab"> FAQ </a>
 		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
-		  <button tab-id="forum" class="tab"> Discussion </a>
-		  <button tab-id="changelog" class="tab"> Changelog </a>
+		  <button tab-id="discussion" class="tab"> Discussion </a>
+		  <button tab-id="release-notes" class="tab"> Release Notes </a>
 		</div>
 
 	{% endif %}
@@ -75,7 +75,7 @@
 
 		{% include content-discussion.html project = page %}
 
-		{% include content-changelog.html project = page %}
+		{% include content-release-notes.html project = page %}
 
 	{% endif %}
 							 
