--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -1,4 +1,4 @@
-<div class="post-content" tab-id="content">
+<div class="post-content" tab-id="app">
 	<div class="title-div">
 		<span class="title-span"> 
 			{% if include.project.logo %}
