--- a/_includes/project.html
+++ b/_includes/project.html
@@ -52,7 +52,7 @@
 	{% if include.project.has-tabs == true %}
 
 		<div class="tabs">
-		  <button tab-id="content" class="tab"> App </a>
+		  <button tab-id="app" class="tab"> App </a>
 		  <button tab-id="faq" class="tab"> FAQ </a>
 		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
 		  <button tab-id="discussion" class="tab"> Discussion </a>
