--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -27,9 +27,13 @@
       {% include social.html %}
 
       <div class="copyright">
-        <p>
+        <div>
           Antonio-Radu Varga @ 2020
-        </p>
+        </div>
+
+        <div>
+          <a href="/privacy-policy"> Privacy Policy </a>
+        </div>
       </div>
 
     </div>
