--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,11 +1,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.6.3/js/jquery.justifiedGallery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/autosize@4.0.2/dist/autosize.min.js"></script>
-<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-<script src="https://www.powr.io/powr.js?platform=html"></script>
+
+<script src="/assets/js/no-tracking.js"></script>
+
+<script src="/assets/js/lib/powr.js?platform=html"></script>
+<!-- <script src="https://www.powr.io/powr.js?platform=html"></script> -->
+
 
 <script src="/assets/js/utils.js"></script>
 <script src="/assets/js/kelly.js"></script>
@@ -15,6 +18,6 @@
 <script src="/assets/js/faq.js"></script>
 <script src="/assets/js/table.js"></script>
 <script src="/assets/js/slick-swipe.js"></script>
-<script src="/assets/js/counter.js"></script>
+<script src="/assets/js/countapi.js"></script>
 <script src="/assets/js/tabs.js"></script>
 <script src="/assets/js/comments.js"></script>
