--- a/assets/main.scss
+++ b/assets/main.scss
@@ -195,7 +195,7 @@ table {
 	position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 56.25%; /* The height of the item will now be 56% of the width. */
+  padding-bottom: 55%; /* The height of the item will now be 56% of the width. */
 }
 
 .aspect-ratio-photo {
@@ -203,6 +203,10 @@ table {
   width: 100%;
   height: 0;
   padding-bottom: 66.66%;
+}
+
+.youtube {
+	object-fit: cover;
 }
 
 .aspect-img {
@@ -479,6 +483,15 @@ a {
 
 	&:hover, &:active {
 		outline: 0;
+	}
+}
+
+.copyright {
+	font-size: 12px;
+	color: #ababab;
+
+	a {
+		color: #ababab;
 	}
 }
 
@@ -831,6 +844,7 @@ body {
 
 .socials {
 	padding-top: 50px;
+	padding-bottom: 4px;
 	a {
 		margin-right: 8px;
 		font-size: 16px;
@@ -907,11 +921,6 @@ body {
 		display: block;
 		@include transform(rotate(-46deg) translate(-10px, 24px));
 	}
-}
-
-.copyright {
-	font-size: 12px;
-	color: #ababab;
 }
 
 /* ===========  5. Projects  =========== */
@@ -1208,6 +1217,11 @@ body {
 	    font-weight: bold;
 	    padding: 13px 15px 13px 15px;
 
+	    &.download-score {
+	    	width: 96px;
+	    	padding: 5px 10px 3px 10px;
+	    }
+
 	    &:hover {
 			opacity: 0.75;
 	    	color: white !important;
@@ -1231,12 +1245,33 @@ body {
 	    margin-right: 15px;
 
 	    i {
+			@include transition(all 0.3s ease);
 	    	color: black;
 
 	    	&:hover {
-	    		color: #868686;
+	   			opacity: 0.5;
 	    	}
 	    }
+	}
+
+	.musescore-btn, .soundslice-btn {
+		img {
+			@include transition(all 0.3s ease);
+			width: 30px;
+			height: 30px;
+	   		margin-right: 15px;
+
+	   		&:hover {    
+	   			opacity: 0.5;
+	    	}
+	    }
+	}
+
+	.soundslice-btn {
+		img {
+			width: 38px;
+			height: 38px;
+		}
 	}
 
 
