--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,13 +3,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/autosize@4.0.2/dist/autosize.min.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 <script src="/assets/js/no-tracking.js"></script>
-
 <script src="/assets/js/lib/powr.js?platform=html"></script>
 <!-- <script src="https://www.powr.io/powr.js?platform=html"></script> -->
-
-
 <script src="/assets/js/utils.js"></script>
 <script src="/assets/js/kelly.js"></script>
 <script src="/assets/js/contact.js"></script>
