--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -17,6 +17,7 @@
 						<b> Download </b>
 					</a>
 				</span>
+				<div> <p class="download-note"> * If you get a the security warning, right Click on the App -> Open </p> </div>
 
 				<span class="download-span windows">
 					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
@@ -25,6 +26,7 @@
 						<b> Download </b>
 					</a>
 				</span>
+				<div> <p class="download-note"> * Make sure you have .NET Framework 4.7.2 installed </p> </div>
 			</div>
 			
 		{% endif %}
