--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -17,7 +17,7 @@
 						<b> Download </b>
 					</a>
 				</span>
-				<div> <p class="download-note"> * If you get a the security warning, right Click on the App -> Open </p> </div>
+				<!-- <div> <p class="download-note"> * If you get a the security warning, right Click on the App -> Open </p> </div> -->
 
 				<span class="download-span windows">
 					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
