--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -26,7 +26,7 @@
 						<b> Download </b>
 					</a>
 				</span>
-				<div> <p class="download-note"> * Make sure you have .NET Framework 4.7.2 installed </p> </div>
+				<div> <p class="download-note"> * On Windows, .NET Framework 4.7.2 is required </p> </div>
 			</div>
 			
 		{% endif %}
