--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -19,6 +19,8 @@
 				</span>
 				<!-- <div> <p class="download-note"> * If you get a the security warning, right Click on the App -> Open </p> </div> -->
 
+
+			{% if include.project.download-windows %}
 				<span class="download-span windows">
 					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
 					<a href="javascript:download('{{ include.project.download-windows }}');" class="download-btn windows" counter-key="{{ include.project.counter-key-windows }}">
@@ -27,9 +29,11 @@
 					</a>
 				</span>
 				<div> <p class="download-note"> * On Windows, .NET Framework 4.7.2 is required </p> </div>
+			{% endif %}
+
 			</div>
-			
 		{% endif %}
+		
 		{% if include.project.website %}
 			<a href="{{ include.project.website }}" class="title-link fa fa-external-link" target="_blank"></a>
 		{% endif %}
