--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -12,7 +12,7 @@
 			<div class="title-download">
 				<span class="download-span">
 					<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
-					<a href="{{ include.project.download }}" class="download-btn" counter-key="{{ include.project.counter-key }}">
+					<a href="{{ include.project.download }}" target="_blank" class="download-btn" counter-key="{{ include.project.counter-key }}">
 						<i class="fa fa-apple"></i>
 						<b> Download </b>
 					</a>
@@ -23,7 +23,7 @@
 			{% if include.project.download-windows %}
 				<span class="download-span windows">
 					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
-					<a href="{{ include.project.download-windows }}" class="download-btn windows" counter-key="{{ include.project.counter-key-windows }}">
+					<a href="{{ include.project.download-windows }}" target="_blank" class="download-btn windows" counter-key="{{ include.project.counter-key-windows }}">
 						<i class="fa fa-windows"></i>
 						<b> Download </b>
 					</a>
