--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -19,3 +19,4 @@
 <script src="/assets/js/countapi.js"></script>
 <script src="/assets/js/tabs.js"></script>
 <script src="/assets/js/comments.js"></script>
+<script src="/assets/js/download.js"></script>
