--- a/_includes/content-discussion.html
+++ b/_includes/content-discussion.html
@@ -1,19 +1,16 @@
-<div class="post-content hidden" tab-id="discussion" alternate-id="forum">
+<div class="post-content hidden" tab-id="forum" alternate-id="discussion">
 	<span class="title-span"> 
 		{% if include.project.logo %}
 			<img class="title-logo" src="{{ include.project.logo }}"></img>
 		{% endif %}
 
-		<h2 class="title"> Discussion Group </h2>
+		<h2 class="title"> Forum </h2>
 	</span>
 
 	<div class="the-content">
+		<br/> Offical forum for any questions, discussions support, feature requests related to the app is available <a href="{{ include.project.forum-url }}" target="_blank"> HERE </a>.
 
-		There is an active discussion group for the App.
-		<br/> Here you can ask questions about Issues you are experiencing, get information about specific Midi Controllers, submit Feature Requests or post any other remark you have about the App. You can also easily subscribe to Topics you are interested in.
-		<br/> It is similar to a forum, but much simpler and more intuitive to use.
-
-		<br/> <br/> Available <a href="{{ include.project.discussion-url }}" target="_blank"> HERE </a>.
+		<br/><br/> <i> The old forum <a href="{{ include.project.discussion-url }}" target="_blank"> link </a> (no longer in use). </i>
 
 	</div>
 
