--- a/_includes/project.html
+++ b/_includes/project.html
@@ -56,7 +56,7 @@
 		  <button tab-id="app" class="tab"> App </a>
 		  <button tab-id="faq" class="tab"> FAQ </a>
 		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
-		  <button tab-id="discussion" class="tab"> Discussion </a>
+		  <button tab-id="forum" class="tab"> Forum </a>
 		  <button tab-id="release-notes" class="tab"> Release Notes </a>
 		</div>
 
