--- a/_includes/content-discussion.html
+++ b/_includes/content-discussion.html
@@ -8,7 +8,7 @@
 	</span>
 
 	<div class="the-content">
-		<br/> Offical forum for any questions, discussions, support, feature requests related to the app is available <a href="{{ include.project.forum-url }}" target="_blank"> HERE </a>.
+		Offical forum for any questions, discussions, support, feature requests related to the app is available <a href="{{ include.project.forum-url }}" target="_blank"> HERE </a>.
 
 		<br/><br/> <i> The old forum <a href="{{ include.project.discussion-url }}" target="_blank"> link </a> (no longer in use). </i>
 
