--- a/_includes/content-discussion.html
+++ b/_includes/content-discussion.html
@@ -4,7 +4,7 @@
 			<img class="title-logo" src="{{ include.project.logo }}"></img>
 		{% endif %}
 
-		<h2 class="title"> Forum </h2>
+		<h2 class="title"> <a href="{{ include.project.forum-url }}" target="_blank">Forum </a> </h2>
 	</span>
 
 	<div class="the-content">
