--- a/_includes/project.html
+++ b/_includes/project.html
@@ -54,8 +54,8 @@
 
 		<div class="tabs">
 		  <button tab-id="app" class="tab"> App </a>
-		  <button tab-id="faq" class="tab"> FAQ </a>
-		  <button tab-id="feature-requests" class="tab"> Feature Requests </a>
+		  <!-- <button tab-id="faq" class="tab"> FAQ </a> -->
+		  <!-- <button tab-id="feature-requests" class="tab"> Feature Requests </a> -->
 		  <button tab-id="forum" class="tab"> Forum </a>
 		  <button tab-id="release-notes" class="tab"> Release Notes </a>
 		</div>
