--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1406,7 +1406,7 @@ body {
 .tab {
 	white-space: nowrap;
 	height: 35px;
-	width: 20%;
+	width: calc(100%/3);
 	border: 0px;
 	font-weight: 700;
 	font-size: 15px;
