--- a/_includes/musescore.html
+++ b/_includes/musescore.html
@@ -1,1 +1,1 @@
-<iframe sandbox="allow-scripts" class="iframe-dynamic" width="100%" height="350px" src="https://musescore.com/{{ include.uri }}/embed" frameborder="0" allowfullscreen allow="autoplay; fullscreen"></iframe>
+<iframe class="iframe-dynamic" width="100%" height="350px" src="https://musescore.com/{{ include.uri }}/embed" frameborder="0" allowfullscreen allow="autoplay; fullscreen"></iframe>
