--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,24 @@
             {% include menu.html %}
           </div>
 
-          <div class="col-md-9 col-md-offset-3">
-            <div class="projects">
-              {{ content }}
+          {% if layout.width == "large" %}
+         
+            <div class="col-md-10 col-md-offset-3">
+              <div class="projects">
+                {{ content }}
+              </div>
             </div>
-          </div>
+
+          {% else %}
+
+            <div class="col-md-9 col-md-offset-3">
+              <div class="projects">
+                {{ content }}
+              </div>
+            </div>
+
+          {% endif %}
+
         </div>
       </div>
     </div>
