--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -1,37 +1,31 @@
 ---
 layout: default
 description: Sheet music
+width: large
 ---
 
 {%assign pdfPath = "/assets/scores/" | append: page.title | append: ".pdf" %}
 
-<h2 class="center-title"> {{ page.title }} - {{ page.artist }} 
-	<div class="title-download">
-
-		{% if page.musescore-uri != nil %}
-			<a href="https://www.musescore.com/{{ page.musescore-uri }}" class="musescore-btn" target="_blank">
-				<img src="/assets/img/musescore-icon.png"></i>
-			</a>
-		{% endif %}
-
-		{% if page.soundslice-uri != nil %}
-			<a href="https://www.soundslice.com/{{ page.soundslice-uri }}" class="soundslice-btn" target="_blank">
-				<img src="/assets/img/soundslice-icon.png"></i>
-			</a>
-		{% endif %}
-
-		{% if page.youtube-uri != nil %}
-			<a href="https://www.youtube.com/watch?v={{ page.youtube-uri }}" class="youtube-btn" target="_blank">
-				<i class="fa fa-youtube"></i>
-			</a>
-		{% endif %}
+<div class="title-download score-links">
 
 
-		<a href="{{ pdfPath }}" class="download-btn download-score" download>
-			<i class="fa fa-download"></i>
-			<b> PDF </b>
+	{% if page.soundslice-uri != nil %}
+		<a href="https://www.soundslice.com/{{ page.soundslice-uri }}" class="soundslice-btn" target="_blank">
+			<img src="/assets/img/soundslice-icon.png"></i>
 		</a>
-	</div>
-</h2> 
+	{% endif %}
 
-{%- include pdf.html uri = pdfPath -%}
+	{% if page.musescore-uri != nil %}
+		<a href="https://www.musescore.com/{{ page.musescore-uri }}" class="musescore-btn" target="_blank">
+			<img src="/assets/img/musescore-icon.png"></i>
+		</a>
+	{% endif %}
+	
+	{% if page.youtube-uri != nil %}
+		<a href="https://www.youtube.com/watch?v={{ page.youtube-uri }}" class="youtube-btn" target="_blank">
+			<i class="fa fa-youtube"></i>
+		</a>
+	{% endif %}
+</div>
+
+{%- include musescore.html uri = page.musescore-uri -%}
