--- a/_includes/concert.html
+++ b/_includes/concert.html
@@ -13,6 +13,7 @@
 {{ trTag }}
     <td>{{ include.date || date: '%a' }}</td>
     <td>{{ include.date || date: '%d %b %Y' }}</td>
+    <td>{{ include.project}}</td>
     <td>{{ include.venue }}</td>
     <td>{{ include.city }}</td>
     <td>{{ include.country }}</td>
