--- a/_includes/content-project.html
+++ b/_includes/content-project.html
@@ -11,7 +11,7 @@
 		{% if include.project.download %}
 			<div class="title-download">
 				<span class="download-span">
-					<p class="counter" counter-key="{{ include.project.counter-key }}"> </p>
+					<p class="counterx" counter-key="{{ include.project.counter-key }}"> </p>
 					<a href="{{ include.project.download }}" download class="download-btn" counter-key="{{ include.project.counter-key }}">
 						<i class="fa fa-apple"></i>
 						<b> Download </b>
@@ -22,7 +22,7 @@
 
 			{% if include.project.download-windows %}
 				<span class="download-span windows">
-					<p class="counter" counter-key="{{ include.project.counter-key-windows }}"> </p>
+					<p class="counterx" counter-key="{{ include.project.counter-key-windows }}"> </p>
 					<a href="{{ include.project.download-windows }}" download class="download-btn windows" counter-key="{{ include.project.counter-key-windows }}">
 						<i class="fa fa-windows"></i>
 						<b> Download </b>
