--- a/_includes/content-discussion.html
+++ b/_includes/content-discussion.html
@@ -10,7 +10,7 @@
 	<div class="the-content">
 		Offical forum for any questions, discussions, support, feature requests, documentation, FAQ related to the app is available <a href="{{ include.project.forum-url }}" target="_blank"> HERE </a>.
 
-		<br/><br/> <i> The old forum <a href="{{ include.project.discussion-url }}" target="_blank"> link </a> (no longer in use). </i>
+		<!-- <br/><br/> <i> The old forum <a href="{{ include.project.discussion-url }}" target="_blank"> link </a> (no longer in use). </i> -->
 
 	</div>
 
