--- a/_includes/project.html
+++ b/_includes/project.html
@@ -74,6 +74,8 @@
 
 		{% include content-faq.html project = page %}
 
+		{% include content-discussion.html project = page %}
+
 		{% include content-release-notes.html project = page %}
 
 	{% endif %}
